Varios ajustes ainda falta Fazer muita coisa.

--- a/File-Explorer/File-Explorer.resx
+++ b/File-Explorer/File-Explorer.resx
@@ -117,4 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAk
+        CwAAAk1TRnQBSQFMAgEBBQEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEAA/8LGgL/MAAD/wea
+        AewEegH/MAAD/weaAUsEegH/MAAD/weaAQcBmgN6Af8wAAP/B5oBHAKaAnoB/zAAA/8HmgHwApoBegL/
+        MAAD/weaAfcDmgL/MAAD/weaAfQDmgL/MAAD/weaAbwDmgL/MAAD/weaAQcDmgL/MAAD/weaAe8DmgL/
+        MAAD/weaAQcDmgL/MAAD/weaARMDmgL/MAAD/weaAQcDmgL/MAAD/wZ6ARoB8AEcAXoBGgL/MAAQ/0IA
+        AfcKDwH3EgAQ/xIAAQ8B/wgAAf8BDwUAAfEL7wHzEP8BAAH/AfQKGwH0Af8DAAEPCgABDwQAAfIBawuy
+        AWwQ/wEAARoMWQEaAQAB8QEQAQ4KDwEOARAB8QEAAQcBRAGKB9kCsgLZAWUQ/wEAAZoMWQGaAQAB6wHy
+        AQAC/wEAAf8CAAH/AQAC/wEAAfIB6wEHAREBUgGKBtkBsgENAbgC2QENEP8BAAGaDFkBmgEAAesB8wEA
+        AQcBvAEAAesC8gHsAQABBwG8AQAB8wHrAkQBUgENAbgE2QGyARMBbQFrAbIBZQFDBf8BkgEUAREC7wb/
+        AQABmgxZAZoBAAHrAfMBAAHvAQcBAAHzAkMB8wEAAe8BBwEAAfMB6wJEAVIB6gFlAbIC2QGyARMCGQH3
+        AeoBvAHqA/8B6wFDARABQwERBe8D/wEAAZoMWQGaAQAB6wHzAQAB7wEHAgACbQIAAe8BBwEAAfMB6wJE
+        AVIB7QG8ARUCsgEUAhkB6wFtAhkB6gP/ARQBEAH0A/IB8QG8A+8C/wEAAZoMWQGaAQAB6wHzAfQBbQHr
+        AfQB8AJtAfAB9AFtAesB9AHzAesCRAFSAe0BGQHwARQBbAIZAbsBSwFSAewBGQHqBP8I8gHxAbwC/wEA
+        AZoMWQGaAQAB6wHzAfQCBwH0AfIC/wHyAfQCBwH0AfMB6wJEAVIB7QcZARMBFAG8ARkB6gf/AfMD8gHz
+        BP8BAAGaDFkBmgEAAe0B7AwHAewB7QJEAVIB7AsZAeoQ/wEAAZoMWQEbAQAB/wEHAQ4KBwEOAQcB/wJE
+        AXoBSgsSAQcQ/wEAARoEMgF6Af8KAAEPCQAB8QFtAgABRAFFAUoDSwFRAXQBeQRLAUoB8gEAEP8BAAH/
+        AfMDGwH/CwABDwgAAfIBQwH0AgABkgFFAWkDRQFoAmkDRQERAfQCABD/EgABDwH/BgAB8gFDAfQDAAH/
+        AfAK7wHzAwAQ/xIAAfcHDwETAfMUABD/AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYA
+        A/+BAAL/AcABAwL/AgAC/wHPAfMB4AMAAYABAQHfAfsBwAMAAYABAQIAAYADAAGAAQEBJQGkBAABgAEB
+        AiQEAAGAAQECJAQAAYABAQEmAWQEAAGAAQEGAAGAAQEGAAGAAQEGAAGAAQEGAAGAAf8B3wHzAQABAQIA
+        AYEB/wHfAeMBAAEDAgAC/wHPAccBAAEHAgAC/wHAAQ8C/wIACw==
+</value>
+  </data>
 </root>
